test_compile_errors/tests/compile-fail/v_multi_comma.rs
//! Test of too many trailing commas

extern crate tao_log;
use tao_log::*;

fn multi_trailing_comma() {
    infov!(33,,);
}

fn main() {}
