test_compile_errors/tests/compile-fail/v_multi_comma.stderr
error: no rules expected the token `,`
 --> $DIR/v_multi_comma.rs:7:15
  |
7 |     infov!(33,,);
  |               ^ no rules expected this token in macro call
